Fix spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -86,6 +86,7 @@
 html,
 body {
   max-width: 100vw;
+  max-height: -webkit-fill-available;
   overflow-x: hidden;
 }
 
